// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ "K": "V" }

================================================================================
`;

exports[`block-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ K: "V" }

================================================================================
`;

exports[`block-comment.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ "K": "V" }

================================================================================
`;

exports[`block-comment.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{/*comment*/"K":"V"}

=====================================output=====================================
{ /*comment*/ K: "V" }

================================================================================
`;

exports[`bottom-block-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-block-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-block-comment.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-block-comment.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
1 /* block-comment */

=====================================output=====================================
1 /* block-comment */

================================================================================
`;

exports[`bottom-line-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`bottom-line-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`bottom-line-comment.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`bottom-line-comment.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
1 // line-comment

=====================================output=====================================
1 // line-comment

================================================================================
`;

exports[`line-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  "K": "V"
}

================================================================================
`;

exports[`line-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  K: "V",
}

================================================================================
`;

exports[`line-comment.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  "K": "V"
}

================================================================================
`;

exports[`line-comment.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  //comment
  "K":"V"
}

=====================================output=====================================
{
  //comment
  K: "V",
}

================================================================================
`;

exports[`top-block-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  "foo": "bar"
}

================================================================================
`;

exports[`top-block-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  foo: "bar",
}

================================================================================
`;

exports[`top-block-comment.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  "foo": "bar"
}

================================================================================
`;

exports[`top-block-comment.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* comment */{
  "foo": "bar"
}

=====================================output=====================================
/* comment */ {
  foo: "bar",
}

================================================================================
`;

exports[`top-line-comment.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  "foo": "bar"
}

================================================================================
`;

exports[`top-line-comment.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  foo: "bar",
}

================================================================================
`;

exports[`top-line-comment.json format 1`] = `
====================================options=====================================
parsers: ["json"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  "foo": "bar"
}

================================================================================
`;

exports[`top-line-comment.json format 2`] = `
====================================options=====================================
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// comment 1
// comment 2
{
  "foo": "bar"
}

=====================================output=====================================
// comment 1
// comment 2
{
  foo: "bar",
}

================================================================================
`;
